WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186577
Input form controls have white background in dark mode when they should not
https://bugs.webkit.org/show_bug.cgi?id=186577
Summary
Input form controls have white background in dark mode when they should not
Timothy Hatcher
Reported
2018-06-12 15:22:42 PDT
The input, textarea, and select have the wrong text and background color in dark mode. <
rdar://problem/39258325
>
Attachments
Patch
(8.74 KB, patch)
2018-06-12 15:27 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews124 for ios-simulator-wk2
(6.54 MB, application/zip)
2018-06-12 17:34 PDT
,
EWS Watchlist
no flags
Details
Patch
(12.85 KB, patch)
2018-06-13 10:06 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Patch
(12.85 KB, patch)
2018-06-13 10:07 PDT
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2018-06-12 15:27:14 PDT
Created
attachment 342603
[details]
Patch
Megan Gardner
Comment 2
2018-06-12 15:33:19 PDT
Comment on
attachment 342603
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=342603&action=review
r=me with comments, unofficially
> Source/WebCore/ChangeLog:12 > + (WebCore::featureWithValidIdent): Allow dark mode media query in user agenst stylesheets.
agenst?
> Source/WebCore/ChangeLog:17 > + * css/html.css: Se color and background-color to semantic colors for input, textarea, and select.
Se?
> Source/WebCore/css/html.css:925 > + /* While not clearest name, the inactiveborder system color maps to [NSColor controlBackgroundColor] on Mac. */
Should we just add an additional color with a more clear name rather than have all these comments?
Tim Horton
Comment 3
2018-06-12 15:39:11 PDT
Comment on
attachment 342603
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=342603&action=review
> Source/WebCore/css/html.css:389 > + /* While not clearest name, the inactiveborder system color maps to [NSColor controlBackgroundColor] on Mac. */
Probably should add -apple-system-control-background or something
EWS Watchlist
Comment 4
2018-06-12 17:34:10 PDT
Comment on
attachment 342603
[details]
Patch
Attachment 342603
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/8153561
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 5
2018-06-12 17:34:11 PDT
Created
attachment 342613
[details]
Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.4
Timothy Hatcher
Comment 6
2018-06-13 10:06:25 PDT
Created
attachment 342670
[details]
Patch
Timothy Hatcher
Comment 7
2018-06-13 10:07:51 PDT
Created
attachment 342671
[details]
Patch
Megan Gardner
Comment 8
2018-06-13 11:20:22 PDT
Comment on
attachment 342671
[details]
Patch r=me, unofficial
WebKit Commit Bot
Comment 9
2018-06-13 13:26:39 PDT
Comment on
attachment 342671
[details]
Patch Clearing flags on attachment: 342671 Committed
r232806
: <
https://trac.webkit.org/changeset/232806
>
WebKit Commit Bot
Comment 10
2018-06-13 13:26:41 PDT
All reviewed patches have been landed. Closing bug.
mitz
Comment 11
2018-06-13 14:04:45 PDT
Comment on
attachment 342671
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=342671&action=review
> Source/WebCore/DerivedSources.make:1026 > +ifeq ($(shell $(CC) -std=gnu++17 -x c++ -E -P -dM $(SDK_FLAGS) $(TARGET_TRIPLE_FLAGS) $(FRAMEWORK_FLAGS) $(HEADER_FLAGS) -include "wtf/Platform.h" /dev/null | grep ' WTF_PLATFORM_MAC ' | cut -d' ' -f3), 1)
Not entirely new to this patch, but can we avoid invoking the C preprocessor (with the exact same command line!) once per macro whose value we need?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug